--- a/src/css/Footer.module.css
+++ b/src/css/Footer.module.css
@@ -5,7 +5,7 @@
     position: relative;
     width: 1920px;
     height: 80px;
-    
+    top: 2541px;
     background-color: white; 
     border-width: 2px 0px 0px 0px ;
     border-style: solid;
