LeftSidebar 링크달고 수정 공지사항, 1. Abtout, 2. Pre-Production까지 링크 걸음.

--- a/src/css/Leftside2.module.css
+++ b/src/css/Leftside2.module.css
@@ -14,7 +14,121 @@
     position: absolute;
     margin-left: 20px;
 }
+.contentscontainer{
+    display: flex;
+    flex-direction: column;
+    width: 259px;
+    height: 270px;
+    left: 40px;
+    margin-top: 215px;
+}
 
+.gongtong{
+    position: absolute;
+    width: 73px;
+    height: 26px;
+    left: 40px;
+    top: 215px;
+
+    font-family: Noto Sans KR;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 26px;
+    /* identical to box height */
+
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.15px;
+
+    /* Gray 3 */
+
+    color: #828282;
+}
+
+.notice{
+    position: absolute;
+    width: 67px;
+    height: 26px;
+    left: 40px;
+    top: 266px;
+
+    font-family: Noto Sans KR;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 26px;
+    /* identical to box height */
+
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.15px;
+
+    color: #000000;
+}
+
+.schedule{
+    position: absolute;
+    width: 34px;
+    height: 26px;
+    left: 40px;
+    top: 317px;
+    
+    font-family: Noto Sans KR;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 26px;
+    /* identical to box height */
+    
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.15px;
+    
+    color: #000000;
+}
+
+.library{
+    position: absolute;
+    width: 51px;
+    height: 26px;
+    left: 40px;
+    top: 368px;
+    
+    font-family: Noto Sans KR;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 26px;
+    /* identical to box height */
+    
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.15px;
+    
+    color: #000000;
+}
+
+.star{
+    position: absolute;
+    width: 106px;
+    height: 26px;
+    left: 40px;
+    top: 419px;
+    
+    font-family: Noto Sans KR;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 26px;
+    /* identical to box height */
+    
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.15px;
+    
+    color: #000000;
+}
 .mainLabel {
     color: var(--black);
     font-family: var(--font-family-noto_sans_kr);
