--- a/src/css/Leftside.module.css
+++ b/src/css/Leftside.module.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,700,500|Roboto:400");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
+@import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,700,500");
 
 .leftsidebox{
     display: flex;
@@ -10,13 +11,15 @@
     border-width: 0px 2px 0px 0px ;
     border-style: solid;
     border-color: #E0E0E0;
+    position: absolute;
+    margin-left: 20px;
 }
 
 .contentscontainer{
     display: flex;
     flex-direction: column;
     width: 259px;
-    height: 230px;
+    height: 270px;
     left: 40px;
     margin-top: 215px;
 }
@@ -151,276 +154,28 @@
     color: #828282;
 }
 
-.processcontainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    width: 258px;
-    height: 518px;
-    left: 41px;
-    top: 511px;
-}
-
-.numbersbox{
-    position: absolute;
-    width: 25px;
-    height: 470px;
-    left: 41px;
-    top: 550px;
-
-}
-
-.textsbox{  
-    width: 142px;
-    height: 483px;
-    left: 81px;
-    top: 546px;
-}
-
-.about{ 
-    position: absolute;
-    width: 53px;
-    height: 26px;
-    left: 80px;
-    top: 546px;
-
-    font-family: Noto Sans KR;
-    font-style: normal;
+.mainLabel {
+    color: var(--black);
+    font-family: var(--font-family-noto_sans_kr);
     font-weight: 500;
     font-size: 18px;
     line-height: 26px;
-    /* identical to box height */
-
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.15px;
-
-    color: #757575;
-}
-
-.ginfo{
-    position: absolute;
-    width: 101px;
-    height: 26px;
-    left: 80px;
-    top: 581px;
-
-    font-family: Noto Sans KR;
     font-style: normal;
-    font-weight: 500;
+    background: #ffffff;
+    color: black;
+    border-radius: 4px;
+    border: none;
+  }
+
+  .subLabel{
+    color: var(--black);
+    font-family: var(--font-family-noto_sans_kr);
+    font-weight: 400;
     font-size: 18px;
     line-height: 26px;
-    /* identical to box height */
-
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.15px;
-
-    color: #000000;
-}
-
-.janginfo{
-    position: absolute;
-    width: 84px;
-    height: 26px;
-    left: 80px;
-    top: 616px;
-
-    font-family: Noto Sans KR;
     font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 26px;
-    /* identical to box height */
-
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.15px;
-
-    color: #BDBDBD;
-}
-
-.pre{
-    position: absolute;
-    width: 138px;
-    height: 26px;
-    left: 80px;
-    top: 675px;
-    
-    font-family: Noto Sans KR;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 26px;
-    /* identical to box height */
-    
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.15px;
-    
-    color: #757575;
-       
-}
-
-.heemang{
-    position: absolute;
-    width: 101px;
-    height: 26px;
-    left: 80px;
-    top: 710px;
-    
-    font-family: Noto Sans KR;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 26px;
-    /* identical to box height */
-    
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.15px;
-    
-    color: #BDBDBD;    
-}
-
-.gisul{
-    position: absolute;
-    width: 117px;
-    height: 26px;
-    left: 80px;
-    top: 745px;
-    
-    font-family: Noto Sans KR;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 26px;
-    /* identical to box height */
-    
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.15px;
-    
-    /* Gray 4 */
-    
-    color: #BDBDBD;    
-}
-
-.pro{
-    position: absolute;
-    width: 98px;
-    height: 26px;
-    left: 80px;
-    top: 804px;
-    
-    font-family: Noto Sans KR;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 26px;
-    /* identical to box height */
-    
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.15px;
-    
-    color: #757575;    
-}
-
-.gonginfo{
-    position: absolute;
-    width: 67px;
-    height: 26px;
-    left: 80px;
-    top: 839px;
-    
-    font-family: Noto Sans KR;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 26px;
-    /* identical to box height */
-    
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.15px;
-    
-    color: #BDBDBD;
-    
-}
-
-.post{
-    position: absolute;
-    width: 143px;
-    height: 26px;
-    left: 80px;
-    top: 933px;
-    
-    font-family: Noto Sans KR;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 26px;
-    /* identical to box height */
-    
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.15px;
-    
-    color: #757575;    
-}
-
-.chulgu{
-    position: absolute;
-    width: 133px;
-    height: 26px;
-    left: 80px;
-    top: 968px;
-    
-    font-family: Noto Sans KR;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 26px;
-    /* identical to box height */
-    
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.15px;
-    
-    color: #BDBDBD;    
-}
-
-.hyebup{
-    position: absolute;
-    width: 73px;
-    height: 26px;
-    left: 80px;
-    top: 1003px;
-    
-    font-family: Noto Sans KR;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 26px;
-    /* identical to box height */
-    
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.15px;
-    
-    /* Gray 4 */
-    
-    color: #BDBDBD;    
-}
-
-.nowbox{
-    position: absolute;
-    width: 337px;
-    height: 135px;
-    left: 0px;
-    top: 523px;
-    
-    background: #F6F7FB;
-    
-}
+    background: #ffffff;
+    color: gray;
+    border-radius: 4px;
+    border: none;  
+  }
