--- a/src/css/TechDiscussWrite.module.css
+++ b/src/css/TechDiscussWrite.module.css
@@ -5,25 +5,26 @@
 }
 
 .notosanskr_bold_black_24px {
-  color: var(--black);
-  font-family: var(--font-family-noto_sans_kr);
-  font-size: var(--font-size-l);
-  font-weight: 700;
+  color: #828282;
+  font-family: Noto Sans KR;
+  font-size: 18px;
+  font-weight: 500;
   font-style: normal;
-  background: #999999;
+  background: #ffff;
   border-radius: 4px;
-  border: none;
+  border: 1px solid #999999;
 }
 
 .notosanskr_bold_cyan_24px {
   color: var(--white);
-  font-family: var(--font-family-noto_sans_kr);
-  font-size: var(--font-size-l);
-  font-weight: 700;
+  font-family: Noto Sans KR;
   font-style: normal;
-  background: #2d9cdb;
+  font-size: 18px;
+  font-weight: 500;
+  font-style: normal;
+  background: #2D9CDB;
   border-radius: 4px;
-  border: none;
+  border: 1px solid #999999;
 }
 
 .notosanskr_medium_black_16px {
@@ -180,10 +181,12 @@
 
 .body_row_subitem2 {
   margin-left: 30px;
+  width: 250px;
 }
 
 .body_row_subitem3 {
   margin-left: 10px;
+  width: 250px;
 }
 
 .body_row_subitem3 {
@@ -203,4 +206,14 @@
   position: absolute;
   left: 10px;
   top: 100px;
+}
+
+.button{
+  margin-left: 1100px;
+  width: 350px;
+  color: var(--black);
+  font-family: var(--font-family-noto_sans_kr);
+  font-size: 24px;
+  font-weight: 500;
+  font-style: normal;
 }
