--- a/src/css/HomeHeader.module.css
+++ b/src/css/HomeHeader.module.css
@@ -203,10 +203,10 @@
 
 .canclebutton {
   position: absolute;
-  width: 114px;
+  width: 170px;
   height: 48px;
-  top: 520px;
-  left: 260px;
+  top: 490px;
+  right: 70px;
   background: #dfdfdf;
   border-radius: 6px;
 
@@ -222,10 +222,100 @@
 
 .joinbutton {
   position: absolute;
-  width: 114px;
+  width: 170px;
   height: 48px;
-  top: 520px;
-  left: 120px;
+  top: 490px;
+  left: 70px;
+  background: #2D9CDB;
+  border-radius: 6px;
+
+  font-family: Noto Sans KR;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 50px;
+  letter-spacing: -0.02em;
+  text-align: left;
+}
+
+.loginlogo {
+  margin-left: 140px;
+}
+
+.jointitle2 {
+  position: absolute;
+  width: 500px;
+  height: 20px;
+  left: 80px;
+  top: 90px;
+
+  font-family: Noto Sans KR;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 20px;
+  /* identical to box height, or 77% */
+
+  letter-spacing: -0.02em;
+
+  color: #000000;
+}
+
+.modaldivider2 {
+  /* position: absolute; */
+  margin-top: 50px;
+}
+
+.loginoption1 {
+  position: absolute;
+  width: 88px;
+  height: 20px;
+  top: 200px;
+  left: 80px;
+
+  font-family: Noto Sans KR;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  text-align: left;
+}
+
+.logininfo1 {
+  position: absolute;
+  left: 180px;
+  top: 183px;
+}
+
+.loginoption2 {
+  position: absolute;
+  width: 116px;
+  height: 20px;
+  top: 280px;
+  left: 80px;
+
+  font-family: Noto Sans KR;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  text-align: left;
+}
+
+.logininfo2 {
+  position: absolute;
+  left: 180px;
+  top: 260px;
+}
+
+.loginbutton2 {
+  position: absolute;
+  width: 350px;
+  height: 48px;
+  top: 350px;
+  left: 80px;
   background: #2D9CDB;
   border-radius: 6px;
 
