**HopeTable 완성 (카드슬롯 제외)

--- a/src/css/HopeInfoWrite.module.css
+++ b/src/css/HopeInfoWrite.module.css
@@ -208,7 +208,8 @@
 }
 
 .button{
-  margin-left: 1100px;
+  margin-left: 1200px;
+  margin-top: 150px;
   width: 350px;
   color: var(--black);
   font-family: var(--font-family-noto_sans_kr);
