--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,700,500|Roboto:400");
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: var(--font-family-noto_sans_kr), -apple-system,
-    BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
-    Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -15,7 +13,15 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: var(--font-family-noto_sans_kr-bold);
+  font-size: 20px;
+  font-weight: 300;
+  font-style: normal;
+  margin-top: 4px;
+  margin-left: 10px;
+  color: black;
 }
+
 /* Variables */
 
 :root {
