--- a/src/css/Show.module.css
+++ b/src/css/Show.module.css
@@ -27,6 +27,26 @@
   color: #000000;
 }
 
+.ingtitle {
+  position: absolute;
+  width: 226px;
+  height: 24px;
+  left: 60px;
+  top: 637px;
+
+  font-family: Noto Sans KR;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 24px;
+  /* identical to box height, or 100% */
+
+  display: flex;
+  align-items: center;
+
+  color: #000000;
+}
+
 .searchconcert {
   margin-top: 188px;
   margin-left: 1069px;
