css Dashboard 추가

--- a/src/css/HomeHeader.module.css
+++ b/src/css/HomeHeader.module.css
@@ -1,35 +1,35 @@
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,700,500|Roboto:400");
 
 .headerbox {
-  display: flex;
-  width: 1920px;
-  height: 90px;
-  background-color: white;
-  border-width: 0px 0px 2px 0px;
-  border-style: solid;
-  border-color: #bdbdbd;
-  position: absolute;
+    display: flex;
+    width: 1920px;
+    height: 90px;
+    background-color: white; 
+    border-width: 0px 0px 2px 0px ;
+    border-style: solid;
+    border-color: #BDBDBD;
+    position: absolute;
 }
 
 .logocontainer {
-  display: flex;
-  justify-content: flex-start;
-  margin-left: 100px;
-  align-self: center;
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 100px;
+    align-self: center;
 }
 
 .logo {
-  margin-left: 200px;
+    margin-left: 200px;
 }
 
 .logotext {
-  color: black;
-  font-family: var(--font-family-noto_sans_kr);
-  font-size: 20px;
-  font-weight: 700;
-  font-style: normal;
-  margin-top: 4px;
-  margin-left: 10px;
+    color: black;
+    font-family: var(--font-family-noto_sans_kr);
+    font-size: 20px;
+    font-weight: 700;
+    font-style: normal;
+    margin-top: 4px;
+    margin-left: 10px;
 }
 
 .headercontainer {
@@ -65,7 +65,7 @@
 .loginbutton {
   margin-top: -2px;
   margin-left: 5px;
-  background-color: #2d9cdb;
+  background-color: #2D9CDB;
   width: 77px;
   height: 36px;
 }
@@ -74,7 +74,7 @@
   position: absolute;
   width: 165px;
   height: 20px;
-  left: 195px;
+  left: 200px;
   top: 50px;
 
   font-family: Noto Sans KR;
@@ -175,8 +175,8 @@
 
 .info3 {
   position: absolute;
-  left: 180px;
-  top: 310px;
+  left: 172px;
+  top: 300px;
 }
 
 .joinoption4 {
@@ -201,12 +201,37 @@
   top: 390px;
 }
 
+.joinoption5 {
+  position: absolute;
+  width: 116px;
+  height: 20px;
+  top: 487px;
+  left: 70px;
+
+  font-family: Noto Sans KR;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  text-align: left;
+}
+
+.info5 {
+  position: absolute;
+  left: 180px;
+  top: 470px;
+}
+
 .canclebutton {
   position: absolute;
   width: 170px;
   height: 48px;
-  top: 490px;
-  right: 70px;
+  top: 450px;
+  /* top: 550px; */
+  left: 250px;
+  /* top: 550px; */
+  /* right: 70px; */
   background: #dfdfdf;
   border-radius: 6px;
 
@@ -224,9 +249,10 @@
   position: absolute;
   width: 170px;
   height: 48px;
-  top: 490px;
-  left: 70px;
-  background: #2d9cdb;
+  top: 450px;
+  /* top: 550px; */
+  left: -130px;
+  background: #2D9CDB;
   border-radius: 6px;
 
   font-family: Noto Sans KR;
@@ -316,7 +342,7 @@
   height: 48px;
   top: 350px;
   left: 80px;
-  background: #2d9cdb;
+  background: #2D9CDB;
   border-radius: 6px;
 
   font-family: Noto Sans KR;
