--- a/src/css/Show.module.css
+++ b/src/css/Show.module.css
@@ -33,19 +33,34 @@
   height: 24px;
   left: 60px;
   top: 637px;
-
   font-family: Noto Sans KR;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
   line-height: 24px;
   /* identical to box height, or 100% */
-
   display: flex;
   align-items: center;
-
   color: #000000;
 }
+
+.ingtitle1 {
+  position: absolute;
+  width: 400px;
+  height: 24px;
+  left: 60px;
+  top: 637px;
+  font-family: Noto Sans KR;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 24px;
+  /* identical to box height, or 100% */
+  display: flex;
+  align-items: center;
+  color: #2D9CDB;;
+}
+
 
 .searchconcert {
   margin-top: 188px;
